# neural-alpha

./: .gitignore  README.md  neural_alpha.ipynb  new_structure.ipynb  pyproject.toml  requirements.txt
config/: selected_stocks.yaml  wandb.yaml
data/: symlink
model/: vanilla_attn_epoch_100_tr_561_lbw_60_20cumret.pth  vanilla_attn_epoch_100_tr_561_lbw_60_fw_20negcumret.pt  vanilla_attn_epoch_200_bs8_tr_1061_lbw_60_fw_20poscumret.pt  vanilla_attn_epoch_200_tr_1061_lbw_60_fw_20poscumret.pt
notebooks/: perf.ipynb  see_rankvec.ipynb
scripts/: prepare_data.sh
src/: dataset.py  e2e_main.py  main.py  pipeline.py  portfolio.py  trainer.py
src/model/: eval.py  loss.py  mlp.py  nn_model.py
src/utils/: constants.py  metrics.py  utils.py
