[project]
name = "neural-alpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "numpy==1.26.4",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "setuptools>=75.7.0",
    "torch==2.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.3",
]
